fix: footer text color (increased contrast)

--- a/assets/style/_blue.scss
+++ b/assets/style/_blue.scss
@@ -202,6 +202,18 @@
 { background-color: #e5e5e5 }
 
 /* ========================================= */
+/*	$LIGHT GRAY - #D4D4D4                    */
+/* ========================================= */
+
+/* #GRAY COLOR
+/* ============== */
+
+/* footer */
+footer .hollow-social-menu a,
+.copyright-holder
+{ color: #d4d4d4; }
+
+/* ========================================= */
 /*	$GRAY - #888888                          */
 /* ========================================= */
 
@@ -234,11 +246,7 @@ body,
 .comment-date,
 
 /* contact */
-.captcha-holder .captcha,
-
-/* footer */
-footer .hollow-social-menu a,
-.copyright-holder
+.captcha-holder .captcha
 { color: #888; }
 
 /* #GRAY BACKGROUND
